# DRIO_KG

./: docker-compose.yml  final_addresses.csv  merged_addresses.csv  pyproject.toml
Supply_Chain/21_4_25/: .~lock.NIKE_suppliers.csv#  ADIDAS_suppliers.csv  NIKE_suppliers.csv
csv_pipeline/: csv2graph.py  csv_embedder.py  csv_loader.py  neo4j_cred.py  pipeline.py
neo4jdb/: Dockerfile  neo4j.env
neo4jdb/neo4jdb/: neo4j.env
