[project]
name = "drio-kd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "neo4j>=5.28.1",
    "neo4j-graphrag[openai,sentence-transformer,sentence-transformers,sentencetransformers]>=1.6.1",
    "pandas>=2.2.3",
    "rapidfuzz>=3.13.0",
    "spacy>=3.8.5",
    "torchvision>=0.22.0",
]
